urma: add urma tools, including urma_admin and urma_perftest
--------------------------------

Add urma tools, including urma_admin and urma_perftest.
This will compile and generate executable files urma_admin and
urma_perftest.

In rpmbuild, it will add a new package umdk-urma-tools.

** Introduce to urma_admin: **

Supports UB device configuration, information, and statistics query,
and Dfx function.
a) UB Dev management, including status query, communication
entity ID configuration, and Dev parameter configuration
b) URMA resource query: TP status, Jetty resources, and segment
resources.
c) Congestion control algorithm and parameter configuration

** Introduce to urma_perftest: **

The URMA provides tools to test the performance of various URMA
operations, including the delay test and bandwidth test.
a) Delay test: UB device, packet length, Opcode (read/write/Atomic/Send),
Jetty type, and interrupt mode
b) Bandwidth and packet rate tests are supported, including the specified
UB device, packet length, Opcode (read/write/Atomic/Send), Jetty type,
interrupt mode, and batch number.

Signed-off-by: Guoxin Qian <qianguoxin@huawei.com>
Signed-off-by: Yizhen Fan <fanyizhen@huawei.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ include_directories(include)
 add_subdirectory(include)
 add_subdirectory(common)
 add_subdirectory(lib)
+add_subdirectory(tools)
 
 if("${TPS}" STREQUAL "enable")
     add_subdirectory(transport_service)
