urma: modify the cmake path
-------------------------------------

Change cmake module path and tpsa path to make
compile more easier.

Signed-off-by: Yizhen Fan <fanyizhen@huawei.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.12.1)
 project(UBus)
 
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(CMAKE_C_COMPILER "/usr/bin/gcc")
 
 set(CMAKE_FLAGS_PUBILC " -Wall -Werror -Wfloat-equal -Wtrampolines -g -O2 -rdynamic -Wl,-z,noexecstack,-z,relro,-z,now \
