hns3 udma: change path of hns3-urma so
category: feature
bugzilla: NA
CVE: NA

---------------------------------------

Change install path from lib to /usr/lib64.
So that lib of hns3-urma will be at the same
path as other urma libs.

Signed-off-by: Lin He <helin52@huawei.com>
Signed-off-by: Weibo Zhao <zhaoweibo3@huawei.com>

--- a/hw/hns3/CMakeLists.txt
+++ b/hw/hns3/CMakeLists.txt
@@ -15,4 +15,4 @@ set(CMAKE_C_FLAGS "-Wall -Wextra -Wfloat-equal -fno-common -std=gnu99 \
 -D_FORTIFY_SOURCE=2 -O2 -fstack-protector-all -s -ftrapv -Wl,-z,relro,-z,now")
 set(CMAKE_LD_FLAGS "-s")
 
-install(TARGETS UDMA_SO LIBRARY DESTINATION lib OPTIONAL)
+install(TARGETS UDMA_SO LIBRARY DESTINATION /usr/lib64 OPTIONAL)
