hns3 udma: optimize drive performance about post send process, poll jfc process and IOPS.
driver inclusion
category: bugfix
bugzilla: https://gitee.com/openeuler/kernel/issues/I8UNF9
CVE: NA

-----------------------------------------------------------

The main purpose of this patch is to optimize driver performance.
- Move barrier from wqe to doorbell.
- Optimize poll jfc in rc mode.
- Support dwqe function.
- Separate RC code from RM and UM.
- Optimise performance of IOPS.

Signed-off-by: Wei Qin <qinwei61@huawei.com>

--- a/hw/hns3/CMakeLists.txt
+++ b/hw/hns3/CMakeLists.txt
@@ -12,7 +12,8 @@ set(UDMA_NAME urma-hns3)
 set_target_properties(UDMA_SO PROPERTIES OUTPUT_NAME ${UDMA_NAME})
 
 set(CMAKE_C_FLAGS "-Wall -Wextra -Wfloat-equal -fno-common -std=gnu99 \
--D_FORTIFY_SOURCE=2 -O2 -fstack-protector-all -s -ftrapv -Wl,-z,relro,-z,now")
+-D_FORTIFY_SOURCE=2 -O2 -fstack-protector-all -s -ftrapv -Wl,-z,relro,-z,now \
+-march=armv8.3-a+crc+crypto+fp+sve")
 set(CMAKE_LD_FLAGS "-s")
 
 install(TARGETS UDMA_SO LIBRARY DESTINATION /usr/lib64/urma OPTIONAL)
