--- a/transport_service/core/tpsa/CMakeLists.txt
+++ b/transport_service/core/tpsa/CMakeLists.txt
@@ -17,4 +17,6 @@ set_property(TARGET tpsa PROPERTY C_STANDARD 99)
 set_target_properties(tpsa PROPERTIES VERSION 0.0.1 SOVERSION 0)
 target_link_libraries(tpsa gobject-2.0 glib-2.0 urma_common)
 
-install(TARGETS tpsa DESTINATION /usr/lib64)
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(TARGETS tpsa DESTINATION /usr/lib64)
+endif()
