--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -15,4 +15,7 @@ include_directories(${CMAKE_SOURCE_DIR}/include/common)
 set_property(TARGET urma_common PROPERTY C_STANDARD 99)
 set_target_properties(urma_common PROPERTIES VERSION 0.0.1 SOVERSION 0)
 target_link_libraries(urma_common gobject-2.0 glib-2.0 -ldl -lrt)
-install(TARGETS urma_common DESTINATION /usr/lib64)
+
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(TARGETS urma_common DESTINATION /usr/lib64)
+endif()
