--- a/tools/urma_admin/CMakeLists.txt
+++ b/tools/urma_admin/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(urma_admin
     admin_parameters.c
     admin_file_ops.c
     admin_cmd.c
+    admin_netlink.c
 )
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -16,4 +17,6 @@ include_directories(${PROJECT_SOURCE_DIR}/include/common)
 target_link_libraries(urma_admin glib-2.0)
 
 set_target_properties(urma_admin PROPERTIES C_STANDARD 99)
-install(TARGETS urma_admin DESTINATION /usr/bin)
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(TARGETS urma_admin DESTINATION /usr/bin)
+endif()
