--- a/tools/uvs_admin/config/CMakeLists.txt
+++ b/tools/uvs_admin/config/CMakeLists.txt
@@ -1,3 +1,5 @@
-install(FILES "${CMAKE_SOURCE_DIR}/tools/uvs_admin/config/uvs_admin.conf"
-    DESTINATION /etc/rsyslog.d/
-    PERMISSIONS OWNER_WRITE OWNER_READ)
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(FILES "${CMAKE_SOURCE_DIR}/tools/uvs_admin/config/uvs_admin.conf"
+        DESTINATION /etc/rsyslog.d/
+        PERMISSIONS OWNER_WRITE OWNER_READ)
+endif()
