--- a/transport_service/CMakeLists.txt
+++ b/transport_service/CMakeLists.txt
@@ -31,8 +31,12 @@ set_target_properties(uvs_daemon PROPERTIES
 
 target_link_libraries(tpsa_daemon tpsa glib-2.0 pthread urma_common)
 
-install(TARGETS tpsa_daemon DESTINATION /usr/sbin)
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(TARGETS tpsa_daemon DESTINATION /usr/sbin)
+endif()
 
 target_link_libraries(uvs_daemon tpsa glib-2.0 pthread urma_common)
 
-install(TARGETS uvs_daemon DESTINATION /usr/sbin)
+if("${URMA_INSTALL}" STREQUAL "enable")
+    install(TARGETS uvs_daemon DESTINATION /usr/sbin)
+endif()
