sync 20240318_happy_birthday_tag

--- a/lib/urma/config/CMakeLists.txt
+++ b/lib/urma/config/CMakeLists.txt
@@ -1,6 +1,8 @@
+if("${URMA_INSTALL}" STREQUAL "enable")
 install(FILES "${CMAKE_SOURCE_DIR}/lib/urma/config/urma.conf"
     DESTINATION /etc/rsyslog.d/
     PERMISSIONS OWNER_WRITE OWNER_READ)
 install(FILES "${CMAKE_SOURCE_DIR}/lib/urma/config/urma"
     DESTINATION /etc/logrotate.d/
     PERMISSIONS OWNER_WRITE OWNER_READ)
+endif()
