--- a/transport_service/config/tpsa.ini
+++ b/transport_service/config/tpsa.ini
@@ -6,6 +6,7 @@
 tpsa_connect_type=SOCK
 tpsa_server_ip=127.0.0.1
 tpsa_server_port=1225
+tpsa_worker_cpu_core=9
 
 [EID]
 ## Configure map table entries, each entry consists of a key-value pair
