--- a/transport_service/core/tpsa/CMakeLists.txt
+++ b/transport_service/core/tpsa/CMakeLists.txt
@@ -12,10 +12,11 @@ include_directories(${CMAKE_SOURCE_DIR}/transport_service/daemon/include)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/include/common)
 include_directories(${CMAKE_SOURCE_DIR}/transport_service/core/tpsa/include)
+include_directories(/usr/include/libnl3)
 
 set_property(TARGET tpsa PROPERTY C_STANDARD 99)
 set_target_properties(tpsa PROPERTIES VERSION 0.0.1 SOVERSION 0)
-target_link_libraries(tpsa gobject-2.0 glib-2.0 urma_common)
+target_link_libraries(tpsa gobject-2.0 glib-2.0 urma_common_static nl-genl-3 nl-3)
 
 if("${URMA_INSTALL}" STREQUAL "enable")
     install(TARGETS tpsa DESTINATION /usr/lib64)
