hns3 udma: add prefix hns3 for udma in struct and macro.
driver inclusion
category: bugfix
bugzilla: https://gitee.com/openeuler/kernel/issues/IAE3IT
CVE: NA

--------------------------------------------------------

the patch added prefix hns3 for udma in struct and macro.

Signed-off-by: WenChun Fei <feiwenchun@huawei.com>

--- a/hw/hns3/CMakeLists.txt
+++ b/hw/hns3/CMakeLists.txt
@@ -1,19 +1,19 @@
 aux_source_directory(${CMAKE_CURRENT_LIST_DIR} PROVIDER_UB_DIR_SRCS)
 
-add_library(UDMA_SO SHARED ${PROVIDER_UB_DIR_SRCS})
+add_library(HNS3_UDMA_SO SHARED ${PROVIDER_UB_DIR_SRCS})
 
-target_include_directories(UDMA_SO PRIVATE ${UBus_SOURCE_DIR}/lib/urma/include)
-target_include_directories(UDMA_SO PRIVATE ${UBus_SOURCE_DIR}/include/common)
+target_include_directories(HNS3_UDMA_SO PRIVATE ${UBus_SOURCE_DIR}/lib/urma/include)
+target_include_directories(HNS3_UDMA_SO PRIVATE ${UBus_SOURCE_DIR}/include/common)
 
-target_link_libraries(UDMA_SO PRIVATE urma)
-target_link_libraries(UDMA_SO PRIVATE urma_common)
+target_link_libraries(HNS3_UDMA_SO PRIVATE urma)
+target_link_libraries(HNS3_UDMA_SO PRIVATE urma_common)
 
-set(UDMA_NAME urma-hns3)
-set_target_properties(UDMA_SO PROPERTIES OUTPUT_NAME ${UDMA_NAME})
+set(HNS3_UDMA_NAME urma-hns3)
+set_target_properties(HNS3_UDMA_SO PROPERTIES OUTPUT_NAME ${HNS3_UDMA_NAME})
 
 set(CMAKE_C_FLAGS "-Wall -Wextra -Wfloat-equal -fno-common -std=gnu99 \
 -D_FORTIFY_SOURCE=2 -O3 -fstack-protector-all -s -ftrapv -Wl,-z,relro,-z,now \
 -march=armv8.3-a+crc+crypto+fp+sve")
 set(CMAKE_LD_FLAGS "-s")
 
-install(TARGETS UDMA_SO LIBRARY DESTINATION /usr/lib64/urma OPTIONAL)
+install(TARGETS HNS3_UDMA_SO LIBRARY DESTINATION /usr/lib64/urma OPTIONAL)
